2006-07-25  Chris Dunlap  <cdunlap@llnl.gov>

	* QUICKSTART: Updated.

	* src/etc/munge.sysconfig: Removed PIDFILE since the MUNGED_PIDFILE
	  define in src/libcommon/munge_defs.h needs to be modified as well.

2006-07-24  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Tweaked %post test to create munge.key.

	* src/libcommon/auth_policy.h: Tweaked documentation.

	* munge.spec: Added munge requires tag to munge-devel & munge-libs.

	* munge.spec: Added %post to create munge.key if it does not exist.

	* src/munged/timer.c(timer_thread): Added pthread_sigmask() to new
	  thread to force signals to interrupt accept() in job_accept().
	* src/munged/work.c(_work_exec):  Added pthread_sigmask() to new
	  threads to force signals to interrupt accept() in job_accept().

2006-07-22  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/conf.c(display_help): Tweaked verbage.

	* src/libcommon/str.c, src/libcommon/str.h: Added strhex2bin().
	  Renamed strhex() to strbin2hex() and changed prototype.
	* src/libmunge/auth_send.c(_name_auth_file): Changed behavior to name
	  auth file by XORing the first half of the random component of the
	  auth pipe with the second half.
	* src/munged/auth_recv.c: Renamed strhex() to strbin2hex().

2006-07-21  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/auth_send.c(_name_auth_file): Updated function comment.
	* src/munged/auth_recv.c(_name_auth_pipe): Updated function comment.

	* BUGS, README.AIX, src/libcommon/munge_defs.h, src/munged/auth_recv.c,
	  src/munged/conf.c, src/munged/conf.h, src/munged/munged.8.in:
	  Changed MUNGE_AUTH_PIPE_DIR to MUNGE_AUTH_SERVER_DIR.
	  Changed MUNGE_AUTH_FILE_DIR to MUNGE_AUTH_CLIENT_DIR.
	  Changed "--auth-pipe-dir" to "--auth-server-dir".
	  Changed "--auth-file-dir" to "--auth-client-dir".
	* src/libcommon/m_msg.c, src/libcommon/m_msg.h,
	  src/libmunge/auth_send.c, src/munged/auth_recv.c:
	  Changed a_pipe_* to auth_s_*, a_file_* to auth_c_*.
